# datadescriptor_uselections2020

./: .gitignore  README.md  setup.cfg
us2020data/src/: datacurate_biden.py  datacurate_harris.py  datacurate_pence.py  datacurate_trump.py  utils.py
us2020data/stm/: postprocess_elections2020_1.py  postscrape_elections2020_0.py  utils.py
us2020data/webcollect/: webscrape_bidenmedium.py  webscrape_cspan.py  webscrape_harrismedium.py  webscrape_kamalamedium.py  webscrape_miller_daterange.py  webscrape_votesmart.py
