[metadata]
name = us2020data
description = A package to collect and preprocess text data from campaign speeches of the US 2020 presidential election.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ioannis Chalkiadakis
version=0.1
license = MIT
license_files = LICENSE
url=https://github.com/ichalkiad/datadescriptor_uselections2020
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/ichalkiad/datadescriptor_uselections2020/issues

[options]
packages =
    us2020data
install_requires =
    numpy>=1.23.5
    scipy>=1.9.3
    pandas>=1.5.2
    flashtext>=2.7
    nltk>=3.8
    plotly>=5.11.0
    scikit-learn>=1.2.1
    pickle5
    protobuf>=3.20.3
    networkx>=3.1
    spacy>=3.5.2
    benepar>=0.2.0
    pygraphviz>=1.11
    pyarrow>=11.0.0

python_requires = >=3.6

zip_safe = no

[options.packages.find]
where = us2020data

